Aggiunta thymeleaf su pom

--- a/springboot_todo_list-main/springboot_todo_list-main/pom.xml
+++ b/springboot_todo_list-main/springboot_todo_list-main/pom.xml
@@ -57,6 +57,11 @@
 		</dependency>
 	</dependencies>
 
+	<dependencies>
+		<groupId> org.springframework.boot </groupId>
+		<artifactId> spring-boot-starter-thymeleaf </artifactId>
+	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
